--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: selenium-server
 Section: web
 Priority: extra
 Maintainer: Michael Prokop <mika@debian.org>
-Build-Depends: debhelper (>= 8.0.0)
+Build-Depends: debhelper (>= 8.0.0), wget
 Standards-Version: 3.9.2
 Homepage: https://github.com/mika/selenium-deb-pkg
 Vcs-Git: git://github.com/mika/selenium-deb-pkg.git
