--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: selenium-server
 Section: web
 Priority: extra
 Maintainer: Michael Prokop <mika@debian.org>
-Build-Depends: debhelper (>= 8.0.0), wget
+Build-Depends: debhelper (>= 8.0.0),
+               wget
 Standards-Version: 3.9.5
 Homepage: https://github.com/mika/selenium-deb-pkg
 Vcs-Git: git://github.com/mika/selenium-deb-pkg.git
@@ -10,7 +11,9 @@ Vcs-Browser: https://github.com/mika/selenium-deb-pkg
 
 Package: selenium-server
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, sun-java6-jre | java-runtime-headless | openjdk-7-jre-headless | openjdk-6-jre-headless
+Depends: sun-java6-jre | java-runtime-headless | openjdk-7-jre-headless | openjdk-6-jre-headless,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: automated web application testing system
  Selenium automates browsers. Primarily it is for automating web
  applications for testing purposes, but is certainly not limited
