--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: https://github.com/mika/selenium-deb-pkg
 
 Package: selenium-server
 Architecture: all
-Depends: sun-java6-jre | java-runtime-headless | openjdk-7-jre-headless | openjdk-6-jre-headless,
+Depends: openjdk-7-jre-headless | java-runtime-headless
          ${misc:Depends},
          ${shlibs:Depends}
 Description: automated web application testing system
